feat: pubsub redis config setting